k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: php-deployment
    labels:
        component: php-server
spec:
    replicas: 3
    selector:
        matchLabels:
            component: php-server
    template:
        metadata:
            labels:
                component: php-server
        spec:
            containers:
                - name: php-server
                  image: aryan9600/ieeectf-haunted
                  ports:
                    - containerPort: 80
