k8s/dontbesobrutal-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: dbsb-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: dbsb
    ports:
        - port: 2999
          targetPort: 8000
