k8s/php-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: php-server-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: php-server
    ports:
        - port: 8080
          targetPort: 80
