k8s/re-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: re-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: re
    ports:
        - port: 9001
          targetPort: 9001
