k8s/ssrf-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: ssrf-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: ssrf
    ports:
        - port: 2640
          targetPort: 2640
